Add new blog images and insights page, update existing files

--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
         <li><a href="about.html" class="active">About Us</a></li>
         <li><a href="consulting.html">Consulting</a></li>
         <li><a href="software.html">Software</a></li>
+        <li><a href="insights.html" >Insights</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
