--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
       <li><a href="about.html">About Us</a></li>
       <li><a href="consulting.html">Consulting</a></li>
       <li><a href="software.html">Software</a></li>
+      <li><a href="insights.html" >Insights</a></li>
       <li><a href="contact.html"class="active">Contact</a></li>
     </ul>
   </div>
