--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="description" content="Trade Show Savvy - Home">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Trade Show, Consulting, Software, Event Planning">
+  <meta name="author" content="Trade Show Savvy">
   <title>Home | Trade Show Savvy</title>
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="style2.css">
@@ -14,9 +16,10 @@
   <header class="site-header">
     <div class="overlay"></div>
     <div class="header-content container">
-
+      <!-- Add logo and navigation if needed -->
     </div>
   </header>
+
   <!-- NAVIGATION STRIP -->
   <nav class="nav-strip">
     <div class="container">
@@ -25,6 +28,7 @@
         <li><a href="about.html">About Us</a></li>
         <li><a href="consulting.html">Consulting</a></li>
         <li><a href="software.html">Software</a></li>
+        <li><a href="insights.html" >Insights</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
