--- a/software.html
+++ b/software.html
@@ -25,6 +25,7 @@
       <li><a href="about.html">About Us</a></li>
       <li><a href="consulting.html">Consulting</a></li>
       <li><a href="software.html" class="active">Software</a></li>
+      <li><a href="insights.html" >Insights</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
